Changes in openair 0.5-9 [2011-09-08]
=====================================

*	update to windRose and pollutionRose
        stat related annotation

Changes in openair 0.5-8 [2011-09-02]
=====================================

*	NEW FUNCTION importMeta to import site meta data from air
         pollution networks

Changes in openair 0.5-7 [2011-08-30]
=====================================

*	update to trendLevel: improved ... handling
*	update to windRose/pollutionRose: added statistic option
	"abs.count"; improved scaling of segment widths; improved
	... handling

Changes in openair 0.5-6 [2011-08-30]
=====================================

*	NEW FUNCTIONS importTraj, trajPlot, trajLevel for importing
	and plotting pre-defined HYSPLIT back trajectories. These
	functions are under active development and are for testing
	purposes only!
*	Fix error in % upper/lower uncertainty intervals for
	MannKendall
*	More control over trend information placement for MannKendall
	- arguments text.col, lab.frac (for vertical position) and
	lab.cex (for font size)

Changes in openair 0.5-4 [2011-08-04]
=====================================
*	Use roxygen2 for package documentation and future
	maintainability
*	Allow splitByDate to handle mutiple sites and output a new
	column controlled by argument 'name'
*	More options for MannKendall: control of colour and variable
	x-axis scales

Changes in openair 0.5-0 [2011-08-04]
=====================================
*	NEW FUNCTION corPlot for correlation matrices
*	add sep argument to import

Changes in openair 0.4-23 [2011-08-03]
=====================================
*	enhance 'normalise' option in timePlot
*	add annotate option to windRose/pollutionRose
*	NEW FUNCTION TaylorDiagram for model evaluation.

Changes in openair 0.4-22 [2011-06-03]
=====================================
*	NOTE - use reshape2 in place of reshape for speed and reliability
* 	allow more than one pollutant with percentileRose