@@ -3,6 +3,8 @@ Changes in openair 0.5-9 [2011-09-08]
 
 *	update to windRose and pollutionRose
         stat related annotation
+*       update to polarPlot, ploarFreq and polarAnnulus 
+        improved ... handling
 
 Changes in openair 0.5-8 [2011-09-02]
 =====================================
